# votion

./: .coveragerc  .overcommit.yml  .travis.yml  LICENSE  README.md  pyproject.toml  setup.cfg
docs/: conf.py  index.rst
hooks/: lint.sh  test.sh
votion/: __init__.py  __main__.py  foo.py  main.py
votion/tests/: test_foo.py
