[tool.poetry]
name = "votion"
version = "0.0.4"
description = "Docker image build tool"
authors = ["Pavel Sapezhko <me@weastur.com>"]
maintainers = ["Pavel Sapezhko <me@weastur.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/weastur/votion"

[tool.poetry.scripts]
votion = "votion.main:main"

[tool.poetry.dependencies]
python = "^3.7"
docker = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
coverage = "^5.1"
codecov = "^2.0.22"
black = "^19.10b0"
wemake-python-styleguide = "^0.14.0"
mypy = "^0.770"
sphinx = "^3.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

